# gitlab-member-manager

./: README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
docs/plans/: 2026-01-20-command-bar-ui-design.md  2026-01-20-command-bar-ui-implementation-plan.md
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_init.sql  0002_config.sql  0003_local_members_project.sql
src-tauri/src/: db.rs  gitlab.rs  main.rs  models.rs
src/__tests__/: smoke.test.tsx
src/components/: ProjectCombobox.tsx
src/components/ui/: avatar.tsx  button.tsx  checkbox.tsx  command-bar.tsx  command.tsx  dialog.tsx  input.tsx  panel.tsx  popover.tsx  select.tsx  sidebar.tsx  table.tsx  tabs.tsx
src/components/ui/__tests__/: button.test.tsx  command-bar.test.tsx  panel.test.tsx  sidebar.test.tsx
src/lib/: invoke.ts  logger.ts  types.ts  utils.ts
src/pages/: GroupsPage.tsx  LocalMembersPage.tsx  MembersPage.tsx  ProjectsPage.tsx  SettingsPage.tsx
src/styles/: globals.css
